--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body *{
     line-height: 160%;
 }
 body {
-    background-image: url(./ing/Fundo.jpg);
+    background-image: url(./img/Fundo.jpg);
     background-position:top center;
     background-size: 100% auto;
     background-repeat: no-repeat;
